alpha/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: foo-service
spec:
  host: foo-service
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bar-service
spec:
  host: bar-service
  subsets:
  - name: v1
    labels:
      version: v1
---
