alpha/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: core
spec:
  hosts:
  - fbcbsgen01t.fibabanka.local
  location: MESH_INTERNAL
  ports:
  - number: 8082
    name: http
    protocol: HTTP
  resolution: DNS
---
