alpha/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo-service
spec:
  hosts:
  - foo-service
  http:
  - route:
    - destination:
        host: foo-service
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bar-service
spec:
  hosts:
  - bar-service
  http:
  - route:
    - destination:
        host: bar-service
        subset: v1
---
